parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID addProgram SEMICOLON programa1 END
Rule 2     addProgram -> <empty>
Rule 3     programa1 -> vars funcion principal
Rule 4     principal -> MAIN addMain LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET
Rule 5     addMain -> <empty>
Rule 6     vars -> VAR vars1
Rule 7     vars -> empty
Rule 8     vars1 -> tipo vars2 SEMICOLON varsadd
Rule 9     vars2 -> ID addVariable arr vars3
Rule 10    vars3 -> COMMA vars2
Rule 11    vars3 -> empty
Rule 12    varsadd -> vars1
Rule 13    varsadd -> empty
Rule 14    tipo -> INT
Rule 15    tipo -> FLOAT
Rule 16    tipo -> CHAR
Rule 17    tipo -> STRING
Rule 18    arr -> LSQRBRACKET CTEI RSQRBRACKET
Rule 19    arr -> empty
Rule 20    parameters -> parameters2
Rule 21    parameters -> empty
Rule 22    parameters2 -> tipo ID addVariable
Rule 23    parameters2 -> tipo ID addVariable parameters3
Rule 24    parameters3 -> COMMA ID addVariable parameters3
Rule 25    parameters3 -> COMMA tipo ID addVariable parameters3
Rule 26    parameters3 -> COMMA ID addVariable
Rule 27    parameters3 -> COMMA tipo ID addVariable
Rule 28    funcion -> FUNCTION tipo ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto retorno RBRACKET funcion
Rule 29    funcion -> FUNCTION VOID ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET funcion
Rule 30    funcion -> empty
Rule 31    addFunction -> <empty>
Rule 32    retorno -> RETURN ID SEMICOLON
Rule 33    estatuto -> estatuto2 estatuto
Rule 34    estatuto -> empty
Rule 35    estatuto2 -> asignacion SEMICOLON
Rule 36    estatuto2 -> llamada SEMICOLON
Rule 37    estatuto2 -> lectura SEMICOLON
Rule 38    estatuto2 -> escritura SEMICOLON
Rule 39    estatuto2 -> for
Rule 40    estatuto2 -> if
Rule 41    estatuto2 -> while
Rule 42    asignacion -> ID arr EQUAL expresion
Rule 43    llamada -> ID LPARENTHESIS expresion RPARENTHESIS
Rule 44    lectura -> READ LPARENTHESIS vars2 RPARENTHESIS
Rule 45    escritura -> PRINT LPARENTHESIS escritura1 RPARENTHESIS
Rule 46    escritura1 -> expresion escritura2
Rule 47    escritura2 -> COMMA escritura1
Rule 48    escritura2 -> empty
Rule 49    for -> FOR LPARENTHESIS FROM asignacion COMMA TO expresion RPARENTHESIS LBRACKET estatuto RBRACKET
Rule 50    if -> IF LPARENTHESIS expresion RPARENTHESIS THEN LBRACKET estatuto RBRACKET else
Rule 51    else -> ELSE LBRACKET estatuto RBRACKET
Rule 52    else -> empty
Rule 53    while -> WHILE LPARENTHESIS expresion RPARENTHESIS LBRACKET estatuto RBRACKET
Rule 54    expresion -> nexp expresion1
Rule 55    expresion1 -> OR expresion
Rule 56    expresion1 -> empty
Rule 57    nexp -> comexp nexp1
Rule 58    nexp1 -> AND nexp
Rule 59    nexp1 -> empty
Rule 60    comexp -> sumexp compex1
Rule 61    compex1 -> GTHAN sumexp
Rule 62    compex1 -> LTHAN sumexp
Rule 63    compex1 -> GTHANEQ sumexp
Rule 64    compex1 -> LTHANEQ sumexp
Rule 65    compex1 -> DIFFERENT sumexp
Rule 66    compex1 -> EQUALS sumexp
Rule 67    compex1 -> empty
Rule 68    sumexp -> mulexp sumexp1
Rule 69    sumexp1 -> PLUS sumexp
Rule 70    sumexp1 -> MINUS sumexp
Rule 71    sumexp1 -> empty
Rule 72    mulexp -> pexp mulexp1
Rule 73    mulexp1 -> MULTIPLICATION mulexp
Rule 74    mulexp1 -> DIVISION mulexp
Rule 75    mulexp1 -> empty
Rule 76    pexp -> CTEI
Rule 77    pexp -> CTEF
Rule 78    pexp -> CTEC
Rule 79    pexp -> CTESTRING
Rule 80    pexp -> llamada
Rule 81    pexp -> ID
Rule 82    pexp -> LPARENTHESIS expresion RPARENTHESIS
Rule 83    addVariable -> <empty>
Rule 84    empty -> <empty>

Terminals, with rules where they appear

AND                  : 58
CHAR                 : 16
COMMA                : 10 24 25 26 27 47 49
CTEC                 : 78
CTEF                 : 77
CTEI                 : 18 76
CTESTRING            : 79
DIFFERENT            : 65
DIVISION             : 74
ELSE                 : 51
END                  : 1
EQUAL                : 42
EQUALS               : 66
FLOAT                : 15
FOR                  : 49
FROM                 : 49
FUNCTION             : 28 29
GTHAN                : 61
GTHANEQ              : 63
ID                   : 1 9 22 23 24 25 26 27 28 29 32 42 43 81
IF                   : 50
INT                  : 14
LBRACKET             : 4 28 29 49 50 51 53
LPARENTHESIS         : 4 28 29 43 44 45 49 50 53 82
LSQRBRACKET          : 18
LTHAN                : 62
LTHANEQ              : 64
MAIN                 : 4
MINUS                : 70
MULTIPLICATION       : 73
OR                   : 55
PLUS                 : 69
PRINT                : 45
PROGRAM              : 1
RBRACKET             : 4 28 29 49 50 51 53
READ                 : 44
RETURN               : 32
RPARENTHESIS         : 4 28 29 43 44 45 49 50 53 82
RSQRBRACKET          : 18
SEMICOLON            : 1 8 32 35 36 37 38
STRING               : 17
THEN                 : 50
TO                   : 49
VAR                  : 6
VOID                 : 29
WHILE                : 53
error                : 

Nonterminals, with rules where they appear

addFunction          : 28 29
addMain              : 4
addProgram           : 1
addVariable          : 9 22 23 24 25 26 27
arr                  : 9 42
asignacion           : 35 49
comexp               : 57
compex1              : 60
else                 : 50
empty                : 7 11 13 19 21 30 34 48 52 56 59 67 71 75
escritura            : 38
escritura1           : 45 47
escritura2           : 46
estatuto             : 4 28 29 33 49 50 51 53
estatuto2            : 33
expresion            : 42 43 46 49 50 53 55 82
expresion1           : 54
for                  : 39
funcion              : 3 28 29
if                   : 40
lectura              : 37
llamada              : 36 80
mulexp               : 68 73 74
mulexp1              : 72
nexp                 : 54 58
nexp1                : 57
parameters           : 4 28 29
parameters2          : 20
parameters3          : 23 24 25
pexp                 : 72
principal            : 3
programa             : 0
programa1            : 1
retorno              : 28
sumexp               : 60 61 62 63 64 65 66 69 70
sumexp1              : 68
tipo                 : 8 22 23 25 27 28
vars                 : 3 4 28 29
vars1                : 6 12
vars2                : 8 10 44
vars3                : 9
varsadd              : 8
while                : 41

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID addProgram SEMICOLON programa1 END

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID addProgram SEMICOLON programa1 END

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . addProgram SEMICOLON programa1 END
    (2) addProgram -> .

    SEMICOLON       reduce using rule 2 (addProgram -> .)

    addProgram                     shift and go to state 4

state 4

    (1) programa -> PROGRAM ID addProgram . SEMICOLON programa1 END

    SEMICOLON       shift and go to state 5


state 5

    (1) programa -> PROGRAM ID addProgram SEMICOLON . programa1 END
    (3) programa1 -> . vars funcion principal
    (6) vars -> . VAR vars1
    (7) vars -> . empty
    (84) empty -> .

    VAR             shift and go to state 8
    FUNCTION        reduce using rule 84 (empty -> .)
    MAIN            reduce using rule 84 (empty -> .)

    programa1                      shift and go to state 6
    vars                           shift and go to state 7
    empty                          shift and go to state 9

state 6

    (1) programa -> PROGRAM ID addProgram SEMICOLON programa1 . END

    END             shift and go to state 10


state 7

    (3) programa1 -> vars . funcion principal
    (28) funcion -> . FUNCTION tipo ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto retorno RBRACKET funcion
    (29) funcion -> . FUNCTION VOID ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET funcion
    (30) funcion -> . empty
    (84) empty -> .

    FUNCTION        shift and go to state 12
    MAIN            reduce using rule 84 (empty -> .)

    funcion                        shift and go to state 11
    empty                          shift and go to state 13

state 8

    (6) vars -> VAR . vars1
    (8) vars1 -> . tipo vars2 SEMICOLON varsadd
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR
    (17) tipo -> . STRING

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19

    vars1                          shift and go to state 14
    tipo                           shift and go to state 15

state 9

    (7) vars -> empty .

    FUNCTION        reduce using rule 7 (vars -> empty .)
    MAIN            reduce using rule 7 (vars -> empty .)
    LBRACKET        reduce using rule 7 (vars -> empty .)


state 10

    (1) programa -> PROGRAM ID addProgram SEMICOLON programa1 END .

    $end            reduce using rule 1 (programa -> PROGRAM ID addProgram SEMICOLON programa1 END .)


state 11

    (3) programa1 -> vars funcion . principal
    (4) principal -> . MAIN addMain LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET

    MAIN            shift and go to state 21

    principal                      shift and go to state 20

state 12

    (28) funcion -> FUNCTION . tipo ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto retorno RBRACKET funcion
    (29) funcion -> FUNCTION . VOID ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET funcion
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR
    (17) tipo -> . STRING

    VOID            shift and go to state 23
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19

    tipo                           shift and go to state 22

state 13

    (30) funcion -> empty .

    MAIN            reduce using rule 30 (funcion -> empty .)


state 14

    (6) vars -> VAR vars1 .

    FUNCTION        reduce using rule 6 (vars -> VAR vars1 .)
    MAIN            reduce using rule 6 (vars -> VAR vars1 .)
    LBRACKET        reduce using rule 6 (vars -> VAR vars1 .)


state 15

    (8) vars1 -> tipo . vars2 SEMICOLON varsadd
    (9) vars2 -> . ID addVariable arr vars3

    ID              shift and go to state 25

    vars2                          shift and go to state 24

state 16

    (14) tipo -> INT .

    ID              reduce using rule 14 (tipo -> INT .)


state 17

    (15) tipo -> FLOAT .

    ID              reduce using rule 15 (tipo -> FLOAT .)


state 18

    (16) tipo -> CHAR .

    ID              reduce using rule 16 (tipo -> CHAR .)


state 19

    (17) tipo -> STRING .

    ID              reduce using rule 17 (tipo -> STRING .)


state 20

    (3) programa1 -> vars funcion principal .

    END             reduce using rule 3 (programa1 -> vars funcion principal .)


state 21

    (4) principal -> MAIN . addMain LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET
    (5) addMain -> .

    LPARENTHESIS    reduce using rule 5 (addMain -> .)

    addMain                        shift and go to state 26

state 22

    (28) funcion -> FUNCTION tipo . ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto retorno RBRACKET funcion

    ID              shift and go to state 27


state 23

    (29) funcion -> FUNCTION VOID . ID addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET funcion

    ID              shift and go to state 28


state 24

    (8) vars1 -> tipo vars2 . SEMICOLON varsadd

    SEMICOLON       shift and go to state 29


state 25

    (9) vars2 -> ID . addVariable arr vars3
    (83) addVariable -> .

    LSQRBRACKET     reduce using rule 83 (addVariable -> .)
    COMMA           reduce using rule 83 (addVariable -> .)
    SEMICOLON       reduce using rule 83 (addVariable -> .)
    RPARENTHESIS    reduce using rule 83 (addVariable -> .)

    addVariable                    shift and go to state 30

state 26

    (4) principal -> MAIN addMain . LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET

    LPARENTHESIS    shift and go to state 31


state 27

    (28) funcion -> FUNCTION tipo ID . addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto retorno RBRACKET funcion
    (31) addFunction -> .

    LPARENTHESIS    reduce using rule 31 (addFunction -> .)

    addFunction                    shift and go to state 32

state 28

    (29) funcion -> FUNCTION VOID ID . addFunction LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET funcion
    (31) addFunction -> .

    LPARENTHESIS    reduce using rule 31 (addFunction -> .)

    addFunction                    shift and go to state 33

state 29

    (8) vars1 -> tipo vars2 SEMICOLON . varsadd
    (12) varsadd -> . vars1
    (13) varsadd -> . empty
    (8) vars1 -> . tipo vars2 SEMICOLON varsadd
    (84) empty -> .
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR
    (17) tipo -> . STRING

    FUNCTION        reduce using rule 84 (empty -> .)
    MAIN            reduce using rule 84 (empty -> .)
    LBRACKET        reduce using rule 84 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19

    tipo                           shift and go to state 15
    varsadd                        shift and go to state 34
    vars1                          shift and go to state 35
    empty                          shift and go to state 36

state 30

    (9) vars2 -> ID addVariable . arr vars3
    (18) arr -> . LSQRBRACKET CTEI RSQRBRACKET
    (19) arr -> . empty
    (84) empty -> .

    LSQRBRACKET     shift and go to state 38
    COMMA           reduce using rule 84 (empty -> .)
    SEMICOLON       reduce using rule 84 (empty -> .)
    RPARENTHESIS    reduce using rule 84 (empty -> .)

    arr                            shift and go to state 37
    empty                          shift and go to state 39

state 31

    (4) principal -> MAIN addMain LPARENTHESIS . parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET
    (20) parameters -> . parameters2
    (21) parameters -> . empty
    (22) parameters2 -> . tipo ID addVariable
    (23) parameters2 -> . tipo ID addVariable parameters3
    (84) empty -> .
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR
    (17) tipo -> . STRING

    RPARENTHESIS    reduce using rule 84 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19

    parameters                     shift and go to state 40
    parameters2                    shift and go to state 41
    empty                          shift and go to state 42
    tipo                           shift and go to state 43

state 32

    (28) funcion -> FUNCTION tipo ID addFunction . LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto retorno RBRACKET funcion

    LPARENTHESIS    shift and go to state 44


state 33

    (29) funcion -> FUNCTION VOID ID addFunction . LPARENTHESIS parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET funcion

    LPARENTHESIS    shift and go to state 45


state 34

    (8) vars1 -> tipo vars2 SEMICOLON varsadd .

    FUNCTION        reduce using rule 8 (vars1 -> tipo vars2 SEMICOLON varsadd .)
    MAIN            reduce using rule 8 (vars1 -> tipo vars2 SEMICOLON varsadd .)
    LBRACKET        reduce using rule 8 (vars1 -> tipo vars2 SEMICOLON varsadd .)


state 35

    (12) varsadd -> vars1 .

    FUNCTION        reduce using rule 12 (varsadd -> vars1 .)
    MAIN            reduce using rule 12 (varsadd -> vars1 .)
    LBRACKET        reduce using rule 12 (varsadd -> vars1 .)


state 36

    (13) varsadd -> empty .

    FUNCTION        reduce using rule 13 (varsadd -> empty .)
    MAIN            reduce using rule 13 (varsadd -> empty .)
    LBRACKET        reduce using rule 13 (varsadd -> empty .)


state 37

    (9) vars2 -> ID addVariable arr . vars3
    (10) vars3 -> . COMMA vars2
    (11) vars3 -> . empty
    (84) empty -> .

    COMMA           shift and go to state 47
    SEMICOLON       reduce using rule 84 (empty -> .)
    RPARENTHESIS    reduce using rule 84 (empty -> .)

    vars3                          shift and go to state 46
    empty                          shift and go to state 48

state 38

    (18) arr -> LSQRBRACKET . CTEI RSQRBRACKET

    CTEI            shift and go to state 49


state 39

    (19) arr -> empty .

    COMMA           reduce using rule 19 (arr -> empty .)
    SEMICOLON       reduce using rule 19 (arr -> empty .)
    RPARENTHESIS    reduce using rule 19 (arr -> empty .)
    EQUAL           reduce using rule 19 (arr -> empty .)


state 40

    (4) principal -> MAIN addMain LPARENTHESIS parameters . RPARENTHESIS vars LBRACKET estatuto RBRACKET

    RPARENTHESIS    shift and go to state 50


state 41

    (20) parameters -> parameters2 .

    RPARENTHESIS    reduce using rule 20 (parameters -> parameters2 .)


state 42

    (21) parameters -> empty .

    RPARENTHESIS    reduce using rule 21 (parameters -> empty .)


state 43

    (22) parameters2 -> tipo . ID addVariable
    (23) parameters2 -> tipo . ID addVariable parameters3

    ID              shift and go to state 51


state 44

    (28) funcion -> FUNCTION tipo ID addFunction LPARENTHESIS . parameters RPARENTHESIS vars LBRACKET estatuto retorno RBRACKET funcion
    (20) parameters -> . parameters2
    (21) parameters -> . empty
    (22) parameters2 -> . tipo ID addVariable
    (23) parameters2 -> . tipo ID addVariable parameters3
    (84) empty -> .
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR
    (17) tipo -> . STRING

    RPARENTHESIS    reduce using rule 84 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19

    tipo                           shift and go to state 43
    parameters                     shift and go to state 52
    parameters2                    shift and go to state 41
    empty                          shift and go to state 42

state 45

    (29) funcion -> FUNCTION VOID ID addFunction LPARENTHESIS . parameters RPARENTHESIS vars LBRACKET estatuto RBRACKET funcion
    (20) parameters -> . parameters2
    (21) parameters -> . empty
    (22) parameters2 -> . tipo ID addVariable
    (23) parameters2 -> . tipo ID addVariable parameters3
    (84) empty -> .
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR
    (17) tipo -> . STRING

    RPARENTHESIS    reduce using rule 84 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19

    parameters                     shift and go to state 53
    parameters2                    shift and go to state 41
    empty                          shift and go to state 42
    tipo                           shift and go to state 43

state 46

    (9) vars2 -> ID addVariable arr vars3 .
